Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,4 +1,4 @@
-* [VIENNAAddInOverview About the VIENNA AddIn]
+[VIENNAAddInOverview About the VIENNA AddIn]
 
 * [ForUsers User infos]
  * [InstallationNotes Installation Notes]
