Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,7 +1,7 @@
 [VIENNAAddInOverview About the VIENNA AddIn]
 
-* [ForUsers User infos]
- * [InstallationNotes Installation Notes]
+[ForUsers User infos]
+ [InstallationNotes Installation Notes]
  * [GettingStarted Getting Started]
  * [Troubleshooting Troubleshooting]
  * [Release_Notes Release Notes]
