Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,11 +3,11 @@
 * [ForUsers User infos]
  [InstallationNotes Installation Notes]
  * [GettingStarted Getting Started]
-     [HowToTemplate How to Template]  
-     [HowToVideos HOW-TO videos]  
-     [HowToCreateaUPCC3Model How To create a UPCC3 Model]
-     [ReferenceDefaultUPCCModelCreator Reference: Default UPCC Model Creator]
-     [ReferenceStandardCCLImporter Reference: Standard CCL Importer]
+     * [HowToTemplate How to Template]  
+     * [HowToVideos HOW-TO videos]  
+     * [HowToCreateaUPCC3Model How To create a UPCC3 Model]
+     * [ReferenceDefaultUPCCModelCreator Reference: Default UPCC Model Creator]
+     * [ReferenceStandardCCLImporter Reference: Standard CCL Importer]
  * [Troubleshooting Troubleshooting]
  * [Release_Notes Release Notes]
  * [EnterpriseArchitect The Enterprise Architect]
