Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,28 +1,28 @@
-[VIENNAAddInOverview About the VIENNA AddIn]
+  * [VIENNAAddInOverview About the VIENNA AddIn]
 
-* [ForUsers User infos]
- [InstallationNotes Installation Notes]
- * [GettingStarted Getting Started]
-     * [HowToTemplate How to Template]  
-     * [HowToVideos HOW-TO videos]  
-     * [HowToCreateaUPCC3Model How To create a UPCC3 Model]
-     * [ReferenceDefaultUPCCModelCreator Reference: Default UPCC Model Creator]
-     * [ReferenceStandardCCLImporter Reference: Standard CCL Importer]
- * [Troubleshooting Troubleshooting]
- * [Release_Notes Release Notes]
- * [EnterpriseArchitect The Enterprise Architect]
+  * [ForUsers User infos]
+    * [InstallationNotes Installation Notes]
+    * [GettingStarted Getting Started]
+      * [HowToTemplate How to Template]  
+      * [HowToVideos HOW-TO videos]  
+      * [HowToCreateaUPCC3Model How To create a UPCC3 Model]
+      * [ReferenceDefaultUPCCModelCreator Reference: Default UPCC Model Creator]
+      * [ReferenceStandardCCLImporter Reference: Standard CCL Importer]
+    * [Troubleshooting Troubleshooting]
+    * [Release_Notes Release Notes]
+    * [EnterpriseArchitect The Enterprise Architect]
 
 
-* [ForDevelopers Developer infos]
- * [CheckoutfromSVN Check out from SVN]
- * [CreateInstallerFileForDistribution Create installer]   
- * [QuickLinker EA quicklinker feature]
- * [Meetings Meeting Notes]
- * [ReSharperSettings]
+  * [ForDevelopers Developer infos]
+    * [CheckoutfromSVN Check out from SVN]
+    * [CreateInstallerFileForDistribution Create installer]   
+    * [QuickLinker EA quicklinker feature]
+    * [Meetings Meeting Notes]
+    * [ReSharperSettings]
 
-* [RoadMap]
+  * [RoadMap]
 
-* [Presentation VIENNA AddIn Presentation]
+  * [Presentation VIENNA AddIn Presentation]
 
 
   
