Edited wiki page through web user interface.

--- a/wiki/ImportStandardCCLibraries.wiki
+++ b/wiki/ImportStandardCCLibraries.wiki
@@ -25,4 +25,4 @@
 (1) CCTS standard ...
 
 =Related Tasks=
-E.g., link to UPCC Standard Core Component Library Importer
+[CreateaModelinEA Create your first UPCC model]
