--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,7 +2,8 @@
   * [ForUsers User infos]
     * [InstallationNotes Installation Notes]
     * [GettingStarted Getting Started]
-      * [CreateaModelinEA Create your first UPCC model]
+      * [CreateaModelinEA Create a model in Enterprise Architect]
+      * [CreateaUpccModel Create your first UPCC model]
       * [ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
       * [HowToTemplate How to Template]  
       * [HowToVideos HOW-TO videos]  
