--- a/wiki/CreateaUpccModel.wiki
+++ b/wiki/CreateaUpccModel.wiki
@@ -4,7 +4,7 @@
 
 The UML Profile for Core Components is a representation of UN/CEFACT’s Core Components Technical Specification (CCTS) 3.0 in UML. The UML Profile for Core Components (UPCC) is based on the Unified Modeling Language (UML) and defined as a profile on top of it. To model business documents in EA following the UPCC standard, the model must be defined as a UPCC3 model, and must contain certain libraries defined in the UPCC3 standard.
 
-=Creating your first UPCC model=
+=Create your first UPCC model=
 
   # Prepare a new Enterprise Architect project including one empty model
   # In the _Project Browser_, select the model and define it as a UPCC3 Model by selecting _Add-Ins / VIENNAAddIn / Set Model as UMM2/UPCC3 Model_ from the main menu:
