Edited wiki page through web user interface.

--- a/wiki/CreateaModelinEA.wiki
+++ b/wiki/CreateaModelinEA.wiki
@@ -13,7 +13,7 @@
     http://vienna-add-in.googlecode.com/svn/wiki/images/HowToCreateaUPCC3Model_02.gif
   # After clicking _OK_, the new project is generated. It contains exactly one empty model, as you can observe in the _Project Browser_ view:
     http://vienna-add-in.googlecode.com/svn/wiki/images/CreateaModelinEA_03.gif
-  # You can now access the VIENNA AddIn functionality through the _Add-Ins / VIENNAAddIn_ menu:
+  # You can now access the VIENNA Add-In functionality through the _Add-Ins / VIENNAAddIn_ menu:
     http://vienna-add-in.googlecode.com/svn/wiki/images/CreateaModelinEA_04.gif
   # The most frequently used functions, depending on the current context, can also be accessed through the _Add-In_ context menu - simply right-click the newly created model in  the _Project Browser_ and select the _Add-In / VIENNAAddIn_ menu:
     http://vienna-add-in.googlecode.com/svn/wiki/images/CreateaModelinEA_05.gif
