Edited wiki page through web user interface.

--- a/wiki/CreateaUpccModel.wiki
+++ b/wiki/CreateaUpccModel.wiki
@@ -31,4 +31,6 @@ The UML Profile for Core Components is a representation of UN/CEFACT’s Core Co
 (2) CCTS standard http://www.untmg.org/wp-content/uploads/2008/06/specification_ccts3p0odp620080207.pdf
 
 =Related Tasks=
+[CreateaModelinEA Create a model in Enterprise Architect]
+
 [ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
