Edited wiki page through web user interface.

--- a/wiki/ImportStandardCCLibraries.wiki
+++ b/wiki/ImportStandardCCLibraries.wiki
@@ -27,4 +27,6 @@
 (2) CCTS standard http://www.untmg.org/wp-content/uploads/2008/06/specification_ccts3p0odp620080207.pdf
 
 =Related Tasks=
+[CreateaModelinEA Create a model in Enterprise Architect]
+
 [CreateaModelinEA Create your first UPCC model]
