Edited wiki page through web user interface.

--- a/wiki/CreateaModelinEA.wiki
+++ b/wiki/CreateaModelinEA.wiki
@@ -17,7 +17,7 @@ The VIENNA Add-In (Visualizing Inter ENterprise Network Architectures) is an ext
     http://vienna-add-in.googlecode.com/svn/wiki/images/CreateaModelinEA_04.gif
   # The most frequently used functions, depending on the current context, can also be accessed through the _Add-In_ context menu - simply right-click the newly created model in  the _Project Browser_ and select the _Add-In / VIENNAAddIn_ menu:
     http://vienna-add-in.googlecode.com/svn/wiki/images/CreateaModelinEA_05.gif
-  # Set the model as a UPCC3 Model by selecting _Add-Ins / VIENNAAddIn / Set Model as UMM2/UPCC3 Model_ from the main menu:
+  # To start modeling business documents using the newly created model, you must set the model as a UMM or UPCC Model by selecting _Add-Ins / VIENNAAddIn / Set Model as UMM2/UPCC3 Model_ from the main menu:
     http://vienna-add-in.googlecode.com/svn/wiki/images/HowToCreateaUPCC3Model_03.gif
 
 
