Edited wiki page through web user interface.

--- a/wiki/CreateaModelinEA.wiki
+++ b/wiki/CreateaModelinEA.wiki
@@ -2,7 +2,7 @@
 
 =Enterprise Architect=
 
-The VIENNA Add-In (Visualizing Inter ENterprise Network Architectures) is an extension to the UML modeling tool Enterprise Architect (1). This page explains how to create models using Enterprise Architect, and how to access the VIENNA Add-In functionality through the Enterprise Architect User Interface.
+The VIENNA Add-In is an extension to the UML modeling tool Enterprise Architect (1). This page explains how to create models using Enterprise Architect, and how to access the VIENNA Add-In functionality through the Enterprise Architect User Interface.
 
 =Create your first model using Enterprise Architect=
 
