--- a/wiki/Release_Notes.wiki
+++ b/wiki/Release_Notes.wiki
@@ -1,5 +1,14 @@
 #summary Release Notes.
 
+
+= VIENNAAddIn_0.0.6 =
+
+* Updated wizards for creation of ABIEs and BDTs
+* Importer for Core Component Library CCL 09A and CCL 08B
+* Several bugfixes
+
+
+
 = VIENNAAddIn_0.0.5 (build 659) =
 
  * First implementation of on-the-fly validation of CCTS models (only parts of the CCTS model are currently validated). <br>The VIENNA Add-In constantly validates your modeling progress and reports any deviations from the UML Profile for Core Components Specification in a message window.
