--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,8 +5,8 @@
       * [CreateaModelinEA Create a model in Enterprise Architect]
       * [CreateaUpccModel Create your first UPCC model]
       * [ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
-      * [BDTEditor Create your own BDTs]
-      * [HowToTemplate How to Template]  
+      * [CreateyourownBdts Create your own BDTs]
+<!--      * [HowToTemplate How to Template]  -->
       * [HowToVideos HOW-TO videos]  
       * [ReferenceDefaultUPCCModelCreator Reference: Default UPCC Model Creator]
       * [ReferenceStandardCCLImporter Reference: Standard CCL Importer]
