--- a/wiki/CreateyourownAbies.wiki
+++ b/wiki/CreateyourownAbies.wiki
@@ -23,6 +23,11 @@ Every Aggregate Business Information Entity (ABIE) is based on an Aggregated Cor
     http://vienna-add-in.googlecode.com/svn/wiki/images/CreateyourownAbies_05.gif
   # In addition, it is possible to add new BBIEs by clicking the _+_ button:
     http://vienna-add-in.googlecode.com/svn/wiki/images/CreateyourownAbies_06.gif
+  # The same applies to the third column: You can rename BDTs as well as create new ones:
+    http://vienna-add-in.googlecode.com/svn/wiki/images/CreateyourownAbies_07.gif
+    http://vienna-add-in.googlecode.com/svn/wiki/images/CreateyourownAbies_08.gif
+  # The section _Associations_ shows all existing ABIEs that can be associated with the new one. You can select the ABIEs you want to associate from the first column, and for each of those ABIE you can select the Association Business Information Entities (ASBIEs) that should be used from the second column:
+    http://vienna-add-in.googlecode.com/svn/wiki/images/CreateyourownAbies_09.gif
 
   
 
