--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,12 +5,9 @@
       * [CreateaModelinEA Create a model in Enterprise Architect]
       * [CreateaUpccModel Create your first UPCC model]
       * [ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
-      * [CreateyourownAbies Create your own ABIEs]
       * [CreateyourownBdts Create your own BDTs]
-      * [HowToTemplate How to Template]
-      * [HowToVideos HOW-TO videos]  
-      * [ReferenceDefaultUPCCModelCreator Reference: Default UPCC Model Creator]
-      * [ReferenceStandardCCLImporter Reference: Standard CCL Importer]
+      * [CreateyourownAbies Create your own ABIEs]
+      * [HowToVideos Getting Started Videos]  
     * [Troubleshooting Troubleshooting]
     * [Release_Notes Release Notes]
     * [EnterpriseArchitect The Enterprise Architect]
