--- a/wiki/CreateaModelinEA.wiki
+++ b/wiki/CreateaModelinEA.wiki
@@ -30,3 +30,5 @@ The VIENNA Add-In is an extension to the UML modeling tool Enterprise Architect 
 [CreateaUpccModel Create your first UPCC model]
 
 [ImportStandardCCLibraries Import standard CC Libraries into an existing UPCC3 model]
+
+[HowToVideos Getting Started Videos]
