--- a/wiki/HowToVideos.wiki
+++ b/wiki/HowToVideos.wiki
@@ -2,7 +2,7 @@
 
 = Create a default UPCC sample model =
 
-This <a href="http://vienna-add-in.googlecode.com/svn/wiki/videos/HowToVideos01.htm">video</a> shows how to ...
+This [http://vienna-add-in.googlecode.com/svn/wiki/videos/HowToVideos01.htm video] shows how to create a sample model in Enterprise Architect and set it as UPCC model.
 
 = Create BDTs =
 
